<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formularioactivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/et_nombre" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="166dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/et_apellido" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="12dp"
        tools:text="@string/et_direccion" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="177dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/et_telefono" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="177dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/et_email" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="179dp"
        android:layout_height="33dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-2dp"
        tools:text="@string/et_contraseña" />

    <EditText
        android:id="@+id/ettelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdireccion" />

    <EditText
        android:id="@+id/etnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etapellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etnombre" />

    <EditText
        android:id="@+id/etdireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etapellido" />

    <EditText
        android:id="@+id/etcorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettelefono" />

    <Button
        android:id="@+id/btenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/enviarfomulario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/etcontraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etcorreo" />

</androidx.constraintlayout.widget.ConstraintLayout>