<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#8BC34A"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btcalculadora"
        android:layout_width="376dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#8BC34A"
        android:onClick="calculadora"
        android:text="@string/calculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#8A24E3"
        android:text="@string/botonformulario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btcalculadora" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/boton_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="402dp"
        android:layout_height="118dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>